# repo-governance-kernel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTROL_SYSTEM.md  DESIGN_PRINCIPLES.md  EVALUATION.md  HARNESS.md  IMPLEMENTATION_PLAN.md  PRODUCT.md  README.md  RELEASE.md  ROLE_CONTEXT_EVALUATION.md  SCHEMA.md  STATE_MACHINE.md  TRANSITION_COMMANDS.md  WIND_AGENT_EVAL_PLAN.md  pyproject.toml
.githooks/: pre-commit  pre-push
docs/: README.md
index/: README.md
kernel/: README.md  assemble_context.py  audit_control_state.py  audit_task_contracts.py  build_index.py  cli.py  cli_compat.py  config_runtime.py  control_enforcement.py  executor_command_builder.py  executor_runtime.py  governed_bundle_runtime.py  host_adoption.py  product_semantics.py  public_alpha_surface.py  public_flow_contracts.py  public_surface.py  repo_onboarding.py  resolver_runtime.py  round_control.py  runtime_paths.py  transition_specs.py
scripts/: activate_exception_contract.py  adjudicate_control_state.py  assemble_context.py  audit_control_state.py  audit_product_docs.py  audit_task_contracts.py  build_index.py  capture_handoff.py  check_index.py  close_objective.py  compile_adjudication_executor_plan.py  compile_role_context.py  control_enforcement.py  create_snapshot.py  enforce_worktree.py  evaluation_bundle.py  execute_adjudication_followups.py  executor_command_builder.py  executor_runtime.py  git_exec.py  install_hooks.py  invalidate_exception_contract.py  list_transition_registry.py  open_objective.py  open_round.py  open_task_contract.py  prepare_role_eval_bundle.py  query_index.py  (+40 more)
(+1134 files in other folders)
