[project]
name = "repo-governance-kernel"
version = "0.1.0a5"
description = "Registry-first repo governance kernel with bounded control execution"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.scripts]
repo-governance-kernel = "kernel.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kernel", "kernel.commands", "kernel.docs"]
include-package-data = true

[tool.setuptools.package-data]
kernel = ["README.md", "docs/*.md"]

[tool.uv]
package = true
